Changed compilation program to output compiler messages.